--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/app/bootstrap.php.cache
-/app/cache/*
-!app/cache/.gitkeep
-/app/config/parameters.yml
-/app/logs/*
-!app/logs/.gitkeep
-/app/phpunit.xml
 /bin/
-/composer.phar
 /vendor/
 /web/bundles/
+/app/logs/
+/app/cache/
+/app/config/parameters.yml
+/app/bootstrap.php.cache
+/phpunit.xml
+/.idea/
+**/.DS_Store
+*~
