--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+media:
+    resource: @SonataMediaBundle/Resources/config/routing/media.xml
+    prefix: /media
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
