--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
+        "doctrine/doctrine-fixtures-bundle": "^2.2",
         "sonata-project/media-bundle": "^2.3",
-        "jms/serializer-bundle": "^1.0",
-        "doctrine/doctrine-fixtures-bundle": "^2.2"
+        "jms/serializer-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
