--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -12,5 +12,16 @@ web_profiler:
     toolbar: false
     intercept_redirects: false
 
+doctrine:
+    dbal:
+        default_connection: default
+        connections:
+            default:
+                driver:   pdo_sqlite
+                path:     %kernel.cache_dir%/test.db
+
 swiftmailer:
     disable_delivery: true
+
+liip_functional_test:
+    cache_sqlite_db: true
