--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,12 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "^2.2",
         "sonata-project/media-bundle": "^2.3",
+        "friendsofsymfony/rest-bundle": "^1.7",
         "jms/serializer-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
+        "liip/functional-test-bundle": "^1.2",
         "hautelook/alice-bundle": "^1.0"
     },
     "scripts": {
