--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,11 +1,14 @@
 question:
+    type:     rest
     prefix:   /question
     resource: @AppBundle/Resources/config/routing/question.yml
 
 answer:
+    type:     rest
     prefix:   /answer
     resource: @AppBundle/Resources/config/routing/answer.yml
 
 comment:
+    type:     rest
     prefix:   /comment
     resource: @AppBundle/Resources/config/routing/comment.yml
