--- a/src/AppBundle/Resources/config/routing/answer.yml
+++ b/src/AppBundle/Resources/config/routing/answer.yml
@@ -1,4 +1,24 @@
 answer_index:
     path: /
-    method: GET
+    methods: GET
     defaults: { _controller: AppBundle:Answer:index }
+
+answer_show:
+    path: /{id}
+    methods: GET
+    defaults: { _controller: AppBundle:Answer:show }
+
+answer_create:
+    path: /
+    methods: POST
+    defaults: { _controller: AppBundle:Answer:create }
+
+answer_update:
+    path: /{id}
+    methods: PUT|PATH
+    defaults: { _controller: AppBundle:Answer:update }
+
+answer_remove:
+    path: /{id}
+    methods: DELETE
+    defaults: { _controller: AppBundle:Answer:remove }
