--- a/src/AppBundle/Resources/config/routing/comment.yml
+++ b/src/AppBundle/Resources/config/routing/comment.yml
@@ -1,4 +1,24 @@
 comment_index:
     path: /
-    method: GET
+    methods: GET
     defaults: { _controller: AppBundle:Comment:index }
+
+comment_show:
+    path: /{id}
+    methods: GET
+    defaults: { _controller: AppBundle:Comment:show }
+
+comment_create:
+    path: /
+    methods: POST
+    defaults: { _controller: AppBundle:Comment:create }
+
+comment_update:
+    path: /{id}
+    methods: PUT|PATH
+    defaults: { _controller: AppBundle:Comment:update }
+
+comment_remove:
+    path: /{id}
+    methods: DELETE
+    defaults: { _controller: AppBundle:Comment:remove }
