--- a/src/AppBundle/Resources/config/routing/question.yml
+++ b/src/AppBundle/Resources/config/routing/question.yml
@@ -3,6 +3,28 @@ question_index:
     methods: GET
     defaults: { _controller: AppBundle:Question:index }
 
+question_search:
+    path: /search/{keywords}
+    methods: GET
+    defaults: { _controller: AppBundle:Question:search }
+    requirements:
+        keywords: .+
+
+question_most_searched:
+    path: /most_searched
+    methods: GET
+    defaults: { _controller: AppBundle:Question:mostSearched }
+
+question_most_viewed:
+    path: /most_viewed
+    methods: GET
+    defaults: { _controller: AppBundle:Question:mostViewed }
+
+question_newest:
+    path: /newest
+    methods: GET
+    defaults: { _controller: AppBundle:Question:newest }
+
 question_show:
     path: /{id}
     methods: GET
@@ -15,8 +37,13 @@ question_create:
 
 question_update:
     path: /{id}
-    methods: PUT|PATH
+    methods: [PUT, PATCH]
     defaults: { _controller: AppBundle:Question:update }
+
+question_upload:
+    path: /{id}/upload
+    methods: POST
+    defaults: { _controller: AppBundle:Question:upload }
 
 question_remove:
     path: /{id}
