--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bigfoot/demo.answer",
+    "name": "bigfoot/demo-answer",
     "license": "proprietary",
     "type": "project",
     "autoload": {
